--- a/css/calendar.css
+++ b/css/calendar.css
@@ -53,28 +53,28 @@
 #calSelectDays {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    padding-left: 3%;
-    padding-right: 3%;
+    grid-template-rows: repeat(5, 3.3vw);
+    margin-left: 3%;
+    margin-right: 3%;
+    justify-content: center;
+    grid-gap: 5px 5px;
 }
 
 #calSelectDays > button {
-    border: none;
     font-family: 'Roboto', sans-serif;
     font-size: 24px;
     background-color: white;
     color: #68C678;
-    padding: 28%;
+    border: none;
     font-weight: bold;
     outline: none;
-    transition: 0.5s;
+    transition: 0.4s;
 }
+
 
 #calSelectDays > button:hover {
     background-color: ABF989;
-    border-radius: 90px;
-    font-size: 34px;
+    border-radius: 50%;
     transition: 0.3s;
-    padding: 0;
     color: 007F0E;
 }
