--- a/css/calendar.css
+++ b/css/calendar.css
@@ -53,23 +53,34 @@
 
 #calDays > button {
     font-family: 'Roboto', sans-serif;
-    font-size: 1.5vw;
-    background-color: white;
-    color: #68C678;
     border: none;
     outline: none;
     transition: 0.4s;
     height: 4vw;
     width: 4vw;
-}
-
-#calDays > button:hover {
-    background-color: ABF989;
     border-radius: 50%;
-    transition: 0.3s;
-    color: 007F0E;
 }
 
+.dayButton {
+    color: #68C678;
+    font-weight: bold;
+    background-color: white;
+    font-size: 1.5vw;
+}
+
+.dayButton:hover {
+    background-color: ABF989;
+    color: 007F0E;
+    transform: scale(1.25);
+    transition: transform 0.1s;
+}
+
+.otherMonthButton {
+    font-weight: lighter;
+    color: DBDBDB;
+    background-color: white;
+    font-size: 1.5vw;
+}
 
 
 #eventList {
