--- a/css/calendar.css
+++ b/css/calendar.css
@@ -97,7 +97,7 @@
     background-color: red;
     background-color:white;
     border: 1px solid white;
-    border-radius: 15px;
+    border-radius: 2vh;
     box-shadow: 0 3px 15px #D3D3D3;
     margin-bottom: 1%;
 }
@@ -118,4 +118,9 @@
     font-size: 1.5vw;
     font-family: sans-serif;
     color: 3FD548;
+}
+
+.pEventVirtual {
+    background-color: black;
+    height: auto;
 }
