--- a/css/calendar.css
+++ b/css/calendar.css
@@ -92,35 +92,44 @@
     user-select: none;
 }
 
-.eventTemplate {
-    padding: 2% 0 2% 2%;
-    background-color: red;
-    background-color:white;
-    border: 1px solid white;
+.pEventHead {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    font-size: 1.5vw;
+    margin-bottom: 1%;
+    font-family: sans-serif;
     border-radius: 2vh;
     box-shadow: 0 3px 15px #D3D3D3;
-    margin-bottom: 1%;
+    overflow: hidden;
 }
 
-.previewEvent {
-    display: inline;
-    color: #68C678;3FD548
+.pEventLeft {
+    padding: 2% 0 2% 2%;
+    background-color:white;
+    grid-column: 1 / 3;
+    grid-row: 1;
+}
+
+.pEventRight {
+    background-color: #F0F0F0;
+    border-left-style: none;
+    grid-column: 2;
+    grid-row: 1;
+    text-align: center;
 }
 
 .pEventDate {
-    font-size: 1.5vw;
-    font-family: sans-serif;
     margin-right: 0.5%;
     font-weight: bold;
+    color: #68C678;3FD548
 }
 
 .pEventName {
-    font-size: 1.5vw;
-    font-family: sans-serif;
     color: 3FD548;
 }
 
 .pEventVirtual {
     background-color: black;
-    height: auto;
+    color: white;
+
 }
