--- a/css/calendar.css
+++ b/css/calendar.css
@@ -93,7 +93,7 @@
 }
 
 .eventTemplate {
-    padding: 2% 0 2% 2%;
+    padding: 1% 1% 1% 2%;
     background-color: red;
     background-color:white;
     border: 1px solid white;
@@ -104,8 +104,9 @@
 
 .previewEvent {
     color: #68C678;
-    display: inline;
     font-size: 1.5vw;
+    display: flex;
+    align-items: center;
 }
 
 .pEventDate {
@@ -120,7 +121,15 @@
     color: 3FD548;
 }
 
-.pEventVirtual {
-    background-color: black;
-    height: auto;
+.pEventStatus {
+    background-color: 93DB70;
+    color: white;
+    font-size: 1vw;
+    margin-left: auto;
+    padding: 1.3%;
+    border: 0.3vh solid #86C67C;
+    border-radius: 2vh;
+    font-family: sans-serif;
+    font-style: italic;
+    visibility: hidden;
 }
