--- a/css/calendar.css
+++ b/css/calendar.css
@@ -95,11 +95,15 @@
 .eventTemplate {
     padding: 1% 1% 1% 2%;
     background-color: red;
-    background-color:white;
+    background-color: white;
     border: 1px solid white;
     border-radius: 2vh;
     box-shadow: 0 3px 15px #D3D3D3;
     margin-bottom: 1%;
+}
+
+.eventTemplate:hover {
+    transition: 10s;
 }
 
 .previewEvent {
@@ -117,7 +121,7 @@
 }
 
 .pEventName {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: 3FD548;
 }
 
@@ -132,4 +136,68 @@
     font-family: sans-serif;
     font-style: italic;
     visibility: hidden;
+}
+
+.eventInfo {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    font-family: sans-serif;
+    padding-bottom: 1.3%;
+}
+
+.eWarning {
+    grid-column: 1;
+    margin-bottom: 2%;
+}
+
+.eWarningLabel {
+    color: FF6666;
+    font-size: 1vw;
+    background-color: white;
+    border: .25vh solid #FF6666;
+    border-radius: 90px;
+    padding: 0.5% 1.5% 0.5% 1%;
+    font-family: 'Roboto', sans-serif;
+}
+
+.eWarningLabel:before {
+  border: 1px solid FF6666;
+  background-color: FF6666;
+  color: white;
+  border-radius: 50%;
+  content: '!';
+  height: 2vh;
+  width: 2vh;
+  margin-right: 1%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.eExtraDates {
+    grid-column: 1;
+    color: #898989;
+    font-size: 1.25vw;
+    font-family: 'Roboto', sans-serif;
+}
+
+.eStartTime {
+    grid-column: 1;
+    color: 686868;
+    font-size: 1vw;
+}
+
+.eRoom {
+    grid-column: 1;
+    color: 686868;
+    font-size: 1vw;
+}
+
+.eDesc {
+    grid-column: 2;
+    color: #898989;
+    font-size: 1vw;
+    font-family: 'Roboto', sans-serif;
+    text-align: justify;
+    text-justify: inter-word;
 }
