--- a/css/calendar.css
+++ b/css/calendar.css
@@ -4,14 +4,20 @@
 }
 
 #miniCal {
-    background-color:white;
     border: 1px solid white;
     border-radius: 2vw;
     box-shadow: 0 3px 15px #D3D3D3;
     user-select: none;
     padding: 1vw 1vw 1vw 1vw;
     text-align: center;
+}
 
+.miniCal-light {
+    background-color: white;
+}
+
+.miniCal-dark {
+    background-color: #525252;
 }
 
 #calHeader {
@@ -88,61 +94,67 @@
 }
 
 #optionsContainer > div {
-    border: 1px solid white;
     width: 50%;
     display: inline-flex;
     justify-content: space-around;
-    border-radius: 2vw;
-    box-shadow: 0 3px 15px #D3D3D3;
+    border-radius: .6vw;
     padding: 0.5%;
 }
 
 #optionsContainer > div > button {
     font-size: 1.25vw;
     border: none;
-    border-radius: 4vw;
     width: 50%;
     padding: 5%;
     outline: none;
     cursor: pointer;
+    background-color: transparent;
 }
 
-#hoverSelect {
+.selectDiv-light {
+    box-shadow: 0 3px 15px #D3D3D3;
 }
 
-#clickSelect {
+.selectDiv-dark {
+    box-shadow: none;
+    background-color: #525252;
+    border: 1px solid #848484;
 }
 
-#selectTheme {
+.selectButton-dark {
+    color: #bebebe;
 }
 
-.optionUnselected {
-    color: 565656;
-    background-color: white;
-    transition: 1s;
+.themeDiv-light {
+    box-shadow: 0 3px 15px #D3D3D3;
 }
 
-.optionSelected {
-    color: 00AF60;
-    background-color: #93DB70;
-    transition: .25s;
+.themeDiv-dark {
+    box-shadow: none;
+    background-color: #525252;
+    border: 1px solid #848484;
 }
 
+.themeButton-dark {
+    color: #bebebe;
+}
 
-
+.bodyDark {
+    background-color: #414141;
+}
 
 #eventList {
-    margin-left: 4vw;
+    margin-left: 1vw;
     user-select: none;
     grid-column: 2;
 }
 
 .eventTemplate {
-    padding: .3% 1% .3% 2%;
+    padding: .2% 1% .2% 2%;
     background-color: red;
     background-color: white;
     border: 1px solid white;
-    border-radius: 1.5vh;
+    border-radius: 1.75vh;
     box-shadow: 0 3px 15px #D3D3D3;
     margin-bottom: 1%;
 }
@@ -167,15 +179,13 @@
 }
 
 .pEventStatus {
-    background-color: #93DB70;
-    color: white;
+    color: 696969;
     font-size: 1vw;
-    margin-left: auto;
-    padding: 1.3%;
-    border: 0.3vh solid #86C67C;
-    border-radius: 2vh;
-    font-family: sans-serif;
     font-style: italic;
+    margin: 1% 0 1% auto;
+    padding: 10px 1% 10px 2%;
+    border-left: 0.3vh solid #808080;
+    font-family: sans-serif;
     visibility: hidden;
     position: relative;
 }
