--- a/css/calendar.css
+++ b/css/calendar.css
@@ -206,12 +206,18 @@
     border-radius: 1.75vh;
     box-shadow: 0 3px 15px #D3D3D3;
     margin-bottom: 1%;
+    transition: 1s;
 }
 
 .eventTemplate-dark {
     background-color: #525252;
     box-shadow: none;
     border: 1px solid #848484;
+    transition: 1s;
+}
+
+.eventTemplate-virtual {
+    background-color: #FFFBF7;
 }
 
 .previewEvent {
