--- a/css/calendar.css
+++ b/css/calendar.css
@@ -96,11 +96,16 @@
     font-family: 'Roboto', sans-serif;
     border: none;
     outline: none;
-    transition: 0.4s;
+    transition: 0.2s;
     height: 2.8vw;
     width: 2.8vw;
     border-radius: 25%;
     background: none;
+    cursor: pointer;
+}
+
+#calDays > button:hover {
+    background-color: #ABF989;
 }
 
 .dayButton-light {
@@ -113,8 +118,7 @@
     font-size: 1.3vw;
 }
 
-.dayButton:hover {
-    background-color: ABF989;
+.dayButton-light:hover {
     color: 007F0E;
     transition: transform 0.1s;
     cursor: pointer;
@@ -197,6 +201,39 @@
     margin-left: 1vw;
     user-select: none;
     grid-column: 2;
+}
+
+#searchBar {
+    padding: 1% 2% 1% 2%;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 1.75vh;
+    box-shadow: 0 3px 15px #D3D3D3;
+    margin-bottom: 1%;
+    transition: 1s;
+}
+
+#searchBar > div {
+
+}
+
+#searchForm {
+    color: #68C678;
+    font-size: 1.5vw;
+    border: none;
+    outline: none;
+    width: 90%;
+}
+
+#searchForm::placeholder {
+
+}
+
+#searchButton {
+    font-family: 'Roboto', sans-serif;
+    border: none;
+    display: block;
+    float: right;
 }
 
 .eventTemplate {
@@ -312,15 +349,14 @@
 
 .eTimes {
     grid-column: 1;
-    color: 686868;
     font-size: 1.25vw;
-    color: #898989;
+    color: #686868;
 }
 
 .eRoom {
     grid-column: 1;
     color: 686868;
-    font-size: 1vw;
+    font-size: 1.25vw;
 }
 
 .eDescHeading {
